--- a/docs/login.css
+++ b/docs/login.css
@@ -474,3 +474,24 @@ input[type="checkbox"]:checked + label {
   width: 200px;
   height: 40px;
 }
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: #332387 #b79ff7;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #332387;
+  border-radius: 10px;
+  border: 3px outset #ffffff;
+}
