--- a/docs/originer.css
+++ b/docs/originer.css
@@ -1,13 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
 
-html > body {
+html>body {
   font-family: "Noto Sans KR", sans-serif;
 }
 
 /* 라이브러리 */
 
-:root{
-  --site-color:#060A16;
+:root {
+  --site-color: #060A16;
   --site-btn-color: #a8a8a8;
 }
 
@@ -50,8 +50,10 @@ html > body {
 
 /* top-bar-ver2 */
 
-@media ( min-width: 1900px ) {
-  body { overflow-x:hidden; }
+@media (min-width: 1900px) {
+  body {
+    overflow-x: hidden;
+  }
 }
 
 .top-bar-ver2 {
@@ -61,10 +63,12 @@ html > body {
   margin: 0 auto;
   left: 50%;
   transform: translatex(-50%);
+  padding-bottom: 9px;
+  padding-left: 10px;
 }
 
-.top-bar-ver2 > .menu_wrap {
-  height: 172px;
+.top-bar-ver2>.menu_wrap {
+  height: 163px;
   width: 1820px;
   margin: 0 auto;
 }
@@ -76,15 +80,15 @@ html > body {
   font-weight: 700;
 }
 
-.top-bar-ver2__menu-1 > ul > li {
+.top-bar-ver2__menu-1>ul>li {
   margin-right: 50px;
 }
 
-.top-bar-ver2__menu-1 > ul > li:nth-child(2) > a {
+.top-bar-ver2__menu-1>ul>li:nth-child(2)>a {
   position: relative;
 }
 
-.top-bar-ver2__menu-1 > ul > li:nth-child(2) > a::after {
+.top-bar-ver2__menu-1>ul>li:nth-child(2)>a::after {
   content: "";
   width: 5px;
   height: 5px;
@@ -99,27 +103,31 @@ html > body {
 /* menu */
 .d-menu-1 {
   padding-left: 120px;
-  padding-right: 20px;
+  padding-right: 0px;
   font-weight: bold;
   font-size: 25px;
+
 }
 
-.d-menu-1 > li {
+.d-menu-1>li {
   position: relative;
 }
 
-.d-menu-1 > li > a {
+.d-menu-1>li>a {
   padding: 20px;
 }
-.sing-up a{
-  color:#c8c8c8;
-  font-weight:400;
+
+.sing-up a {
+  color: #c8c8c8;
+  font-weight: 400;
 }
-.sing-up:hover a{
-  color:#8976ff;
+
+.sing-up:hover a {
+  color: #8976ff;
 }
+
 /*-- 메뉴 볼 --*/
-.d-menu-box > ul > li > a > .menu-ball::after {
+.d-menu-box>ul>li>a>.menu-ball::after {
   content: "";
   position: absolute;
   top: 15%;
@@ -133,10 +141,11 @@ html > body {
   transition: opacity 0.3s;
 }
 
-.d-menu-box > ul > li:hover > a > .menu-ball::after {
+.d-menu-box>ul>li:hover>a>.menu-ball::after {
   opacity: 1;
   visibility: visible;
 }
+
 /*-------- orgin --------*/
 
 .orgin {
@@ -147,22 +156,22 @@ html > body {
   overflow: hidden;
 }
 
-.orgin > .bg {
+.orgin>.bg {
   position: absolute;
   height: 1018px;
 }
 
-.orgin > .bg > img {
+.orgin>.bg>img {
   width: 100%;
   height: 100%;
 }
 
-.orgin > .orgin__box-1 {
+.orgin>.orgin__box-1 {
   position: absolute;
   left: 40px;
 }
 
-.orgin__box-1 > .flex > div {
+.orgin__box-1>.flex>div {
   height: 100%;
   position: relative;
   clip-path: polygon(57% 0, 100% 0, 41.38% 100%, 0% 99%);
@@ -170,45 +179,41 @@ html > body {
   overflow: hidden;
 }
 
-.orgin__box-1 > .flex > div::after {
+.orgin__box-1>.flex>div::after {
   content: "";
   position: absolute;
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 1)
-  );
+  background-image: linear-gradient(to bottom,
+      rgba(0, 0, 0, 0),
+      rgba(0, 0, 0, 1));
   left: 0;
   top: 0;
   transition: top 0.5s;
 }
 
-.orgin__box-1 > .flex::after {
+.orgin__box-1>.flex::after {
   content: "";
   position: absolute;
   height: 159px;
   width: 1920px;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(0, 0, 0, 1),
-    rgba(0, 0, 0, 0)
-  );
+  background-image: linear-gradient(to bottom,
+      rgba(0, 0, 0, 1),
+      rgba(0, 0, 0, 0));
   left: -40px;
   top: 0;
 }
 
-.orgin__box-1 > .flex > div:hover::after {
+.orgin__box-1>.flex>div:hover::after {
   top: 100%;
 }
 
-.orgin__box-1 > .flex > div > img {
+.orgin__box-1>.flex>div>img {
   transition: filter 0.5s;
   filter: grayscale(100%);
 }
 
-.orgin__box-1 > .flex > div:hover > img {
+.orgin__box-1>.flex>div:hover>img {
   filter: grayscale(0%);
 }
 
@@ -219,51 +224,52 @@ html > body {
   overflow: hidden;
 }
 
-.section02 > .text-bg {
+.section02>.text-bg {
   margin: 0 auto;
   width: 1743px;
   height: 150px;
   background-color: #0e0a40;
 }
 
-.section02 > .text.active {
+.section02>.text.active {
   left: 233px;
 }
 
-.section02 > .text {
+.section02>.text {
   position: absolute;
   top: 38px;
   left: 338px;
   color: white;
 }
 
-.section02 > .text > p:last-child {
+.section02>.text>p:last-child {
   color: #9a9a9a;
 }
 
-.section02 > .btn {
+.section02>.btn {
   position: absolute;
   top: 60px;
   left: 1601px;
 }
 
-.section02 > .btn > .btn-1.active {
+.section02>.btn>.btn-1.active {
   opacity: 0.5;
 }
 
-.section02 > .btn > .btn-2.active {
+.section02>.btn>.btn-2.active {
   opacity: 0.5;
 }
+
 
 /* poster-box */
-.poster-box > .con-2 > p.title{
-  font-size:20px;
-  font-weight:800;
+.poster-box>.con-2>p.title {
+  font-size: 20px;
 }
 
 .poster-box .swiper {
   width: 100%;
   height: 395px;
+  color: #A1A1A1;
 }
 
 .poster-box .swiper-slide .img-box {
@@ -273,17 +279,15 @@ html > body {
   position: relative;
 }
 
-.poster-box .swiper-slide > .title{
-  margin-top:10px;
-  color:#c8c8c8;
-  font-weight:800;
+.poster-box .swiper-slide>.title {
+  margin-top: 10px;
 }
 
-.poster-box .swiper-slide .img-box:hover > img {
+.poster-box .swiper-slide .img-box:hover>img {
   transform: scale(1.1);
 }
 
-.poster-box .swiper-slide > .img-box > img {
+.poster-box .swiper-slide>.img-box>img {
   transition: 0.6s;
   width: 100%;
   height: 100%;
@@ -304,9 +308,6 @@ html > body {
   height: 362px;
 }
 
-.poster-box .swiper-slide:hover .img-box::before {
-  background-color: rgba(0, 0, 0, 0.4);
-}
 
 .poster-box .swiper-slide .img-box::after {
   content: "\f144";
@@ -323,34 +324,35 @@ html > body {
   cursor: pointer;
 }
 
+
 .poster-box .swiper-slide:hover .img-box::after {
   opacity: 1;
 }
 
-.section-3 .swiper-button-next,
-.section-3 .swiper-button-prev{
-  --swiper-navigation-size: 40px;
-  --swiper-navigation-color: var(--site-btn-color);
-  z-index:30;
-   left: -4.2%;
-  right: auto;
+.poster-box .swiper-slide:hover .img-box::before {
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-.section-3 .swiper-button-next{
-  left: auto;
-  right: -4.2%;
+.poster-box .swiper-button-next {
+  background-position: center;
+  transform: translatex(40%);
+}
+
+.poster-box .swiper-button-prev {
+  background-position: center;
+  transform: translatex(-40%);
 }
 
 .poster-box .swiper-button-next,
-.poster-box .swiper-button-prev{
+.poster-box .swiper-button-prev {
   --swiper-navigation-size: 40px;
   --swiper-navigation-color: var(--site-btn-color);
-  z-index:30;
-   left: -4.2%;
+  left: -4.2%;
   right: auto;
 }
 
-.poster-box .swiper-button-next{
+
+.poster-box .swiper-button-next {
   left: auto;
   right: -4.2%;
 }
@@ -360,30 +362,34 @@ html > body {
   display: none;
 }
 
+.section03_ver2 {
+  display: none;
+}
+
 
 
 /* footer */
 footer {
-  height:376px;
-  position:relative;
-  z-index:-200;
+  height: 376px;
+  position: relative;
+  z-index: -200;
 }
 
-footer > .text{
-  padding-top:120px;
-  margin:0 auto;
+footer>.text {
+  padding-top: 120px;
+  margin: 0 auto;
 }
 
-footer > .blur{
-  background-color:#0E0A40;
-  width:1823px;
-  height:206px;
-  position:absolute;
-  top:120px;
-  z-index:-100;
-  left:50%;
-  transform:translatex(-50%);
-    filter: blur(50px);
+footer>.blur {
+  background-color: #0E0A40;
+  width: 1823px;
+  height: 206px;
+  position: absolute;
+  top: 120px;
+  z-index: -100;
+  left: 50%;
+  transform: translatex(-50%);
+  filter: blur(50px);
   -webkit-filter: blur(50px);
 
 }
@@ -406,6 +412,7 @@ footer > .blur{
   transform: translateY(-20px);
   /*  밑에서 위로 올라오게 하기.  */
 }
+
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
 * {
