--- a/docs/index.css
+++ b/docs/index.css
@@ -854,6 +854,14 @@ html > body .poster-box .swiper-button-disabled {
   content: "\f077";
 }
 
+
+/* 별자리 효과 */
+#nodes-wrap {
+  pointer-events:none;
+  z-index:-1;
+  opacity:0.6;
+}
+
 /*-------- 푸터 --------*/
 .mainfooter-box {
   font-size: 18px;
