--- a/docs/docs/index.css
+++ b/docs/docs/index.css
@@ -769,6 +769,8 @@ html > body .poster-box .swiper-button-disabled {
   cursor: pointer;
   padding-top: 100px;
   height: 740px;
+  pointer-events: auto;
+  z-index: 2;
 }
 
 .question-box::after {
@@ -858,7 +860,7 @@ html > body .poster-box .swiper-button-disabled {
 /* 별자리 효과 */
 #nodes-wrap {
   pointer-events:none;
-  z-index:-1;
+  z-index:;
   opacity:0.6;
 }
 
