--- a/docs/docs/play.css
+++ b/docs/docs/play.css
@@ -48,13 +48,61 @@ html > body {
   margin-left:auto;
   margin-right:auto;
 }
+
+/* top-bar-ver2 */
+
+@media ( min-width: 1900px ) {
+  body { overflow-x:hidden; }
+}
+
+
+.top-bar-ver2 {
+  position: fixed;
+  top: 0;
+  z-index: 300;
+  margin: 0 auto;
+  left: 50%;
+  transform: translatex(-50%);
+}
+
+.top-bar-ver2.active{
+  height:110px;
+  align-content:center;
+  display:flex;
+  align-items:center;
+}
+
+.top-bar-ver2 > .menu_wrap {
+  height: 172px;
+  width: 1820px;
+  margin: 0 auto;
+}
+
+.top-bar-ver2__menu-1 {
+  margin-left: 130px;
+  font-size: 25px;
+  color: white;
+  font-weight: 700;
+}
+
+.top-bar-ver2__menu-1 > ul > li {
+  margin-right: 50px;
+}
+
+.top-bar-ver2__menu-1 > ul > li:nth-child(2) > a {
+  position: relative;
+}
+
+
+
+
 /*헤더*/
 .header {
   height: 163px;
 }
 .header a {
   color: white;
-  margin: 0 0px;
+  margin: 0 20px;
   font-weight: bold;
 }
 /* 로고 */
@@ -74,14 +122,14 @@ html > body {
 
 /*-------- 메뉴 --------*/
 .d-menu-1 {
-  padding-left: 140px;
+  padding-left: 120px;
+  padding-right: 20px;
   font-weight: bold;
   font-size: 25px;
 }
 
 .d-menu-1 > li {
   position: relative;
-  padding-right: 40px;
 }
 
 .d-menu-1 > li > a {
@@ -90,28 +138,11 @@ html > body {
 }
 
 /*-- 메뉴 볼 --*/
-.d-menu-1 >li > a > .menu-ball-1::after {
+.d-menu-box > ul > li > a > .menu-ball::after {
   content: "";
   position: absolute;
   top: 2%;
-  left:12%;
-  width: 5px;
-  height: 5px;
-  background-color: #fff;
-  border-radius: 100%;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s;
-}
-.d-menu-1 >li:hover > a > .menu-ball-1::after {
-  opacity: 1;
-  visibility: visible;
-}
-.d-menu-1 li > a > .menu-ball::after {
-  content: "";
-  position: absolute;
-  top: 2%;
-  left: 28%;
+  left: 46%;
   width: 5px;
   height: 5px;
   background-color: #fff;
@@ -121,7 +152,7 @@ html > body {
   transition: opacity 0.3s;
 }
 
-.d-menu-1 li:hover > a > .menu-ball::after {
+.d-menu-box > ul > li:hover > a > .menu-ball::after {
   opacity: 1;
   visibility: visible;
 }
@@ -340,12 +371,18 @@ html > body {
   padding-top:50px;
   padding-bottom:20px;
   font-size:20px;
-  font-weight:bold;
   color:white;
 }
 
 
 /*---- 영화효과 ----*/
+
+.section-4 h1{
+  font-weight:800;
+}
+.section-4 .movie-list > li > :nth-child(2) {
+  font-weight:800;
+}
 .section-4  {
    width: 100%;
   height: 2100px;
@@ -365,12 +402,9 @@ html > body {
 
 
 
-.section-4 .movie-box > a > img {
+.section-4 .movie-box  a > img {
   transition: 0.6s;
-  width: 100%;
-  height: 100%;
   object-fit: cover;
-  z-index: -100;
   position: absolute;
 }
 
@@ -408,6 +442,7 @@ html > body {
   opacity: 0;
   transition: opacity 0.3s;
   cursor: pointer;
+  
 }
 
 .section-4 .movie-list li:hover> .img-box::after {
@@ -425,7 +460,6 @@ html > body {
 .footer-box img{
   margin-top:100px;
 }
-
 /*---------버튼-------*/
 .up-btn {
   cursor: pointer;
