--- a/docs/play.css
+++ b/docs/play.css
@@ -48,70 +48,55 @@ html > body {
   margin-left:auto;
   margin-right:auto;
 }
-/*헤더*/
-.header {
-  height: 163px;
-}
-.header a {
-  color: white;
-  margin: 0 0px;
-  font-weight: bold;
-}
-/* 로고 */
-.logo {
-  padding-left: 50px;
-}
-/*헤더 오른쪽 버튼 */
-.btn{
-  padding-right:50px;
-}
-.search {
-  margin-right: 40px;
-}
-.alarm {
-  margin-right: 40px;
+
+/* top-bar-ver2 */
+
+@media ( min-width: 1900px ) {
+  body { overflow-x:hidden; }
 }
 
-/*-------- 메뉴 --------*/
-.d-menu-1 {
-  padding-left: 140px;
-  font-weight: bold;
+
+.top-bar-ver2 {
+  position: fixed;
+  top: 0;
+  z-index: 300;
+  margin: 0 auto;
+  left: 50%;
+  transform: translatex(-50%);
+}
+
+.top-bar-ver2.active{
+  height:110px;
+  align-content:center;
+  display:flex;
+  align-items:center;
+}
+
+.top-bar-ver2 > .menu_wrap {
+  height: 172px;
+  width: 1820px;
+  margin: 0 auto;
+}
+
+.top-bar-ver2__menu-1 {
+  margin-left: 130px;
   font-size: 25px;
+  color: white;
+  font-weight: 700;
 }
 
-.d-menu-1 > li {
+.top-bar-ver2__menu-1 > ul > li {
+  margin-right: 50px;
+}
+.menu__box > li{
   position: relative;
-  padding-right: 40px;
 }
 
-.d-menu-1 > li > a {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-/*-- 메뉴 볼 --*/
-.d-menu-1 >li > a > .menu-ball-1::after {
+.top-bar-ver2__menu-1 ul li>a > .menu-ball::after {
   content: "";
   position: absolute;
-  top: 2%;
-  left:12%;
-  width: 5px;
-  height: 5px;
-  background-color: #fff;
-  border-radius: 100%;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s;
-}
-.d-menu-1 >li:hover > a > .menu-ball-1::after {
-  opacity: 1;
-  visibility: visible;
-}
-.d-menu-1 li > a > .menu-ball::after {
-  content: "";
-  position: absolute;
-  top: 2%;
-  left: 28%;
+  top: 35%;
+  left: 45%;
   width: 5px;
   height: 5px;
   background-color: #fff;
@@ -121,7 +106,7 @@ html > body {
   transition: opacity 0.3s;
 }
 
-.d-menu-1 li:hover > a > .menu-ball::after {
+.top-bar-ver2__menu-1 ul li:hover>a .menu-ball::after {
   opacity: 1;
   visibility: visible;
 }
@@ -340,12 +325,18 @@ html > body {
   padding-top:50px;
   padding-bottom:20px;
   font-size:20px;
-  font-weight:bold;
   color:white;
 }
 
 
 /*---- 영화효과 ----*/
+
+.section-4 h1{
+  font-weight:800;
+}
+.section-4 .movie-list > li > :nth-child(2) {
+  font-weight:800;
+}
 .section-4  {
    width: 100%;
   height: 2100px;
@@ -365,12 +356,9 @@ html > body {
 
 
 
-.section-4 .movie-box > a > img {
+.section-4 .movie-box  a > img {
   transition: 0.6s;
-  width: 100%;
-  height: 100%;
   object-fit: cover;
-  z-index: -100;
   position: absolute;
 }
 
@@ -408,6 +396,7 @@ html > body {
   opacity: 0;
   transition: opacity 0.3s;
   cursor: pointer;
+  
 }
 
 .section-4 .movie-list li:hover> .img-box::after {
@@ -420,12 +409,28 @@ html > body {
 }
 /*푸터바*/
 .footer{
-  height:200px;
+  height:326px;
+  position:relative;
+  z-index:-200;
 }
-.footer-box img{
-  margin-top:100px;
+.footer-box > img{
+  padding-top:69px;
+  margin:0 auto;
 }
 
+.footer .blur{
+  background-color:#0E0A40;
+  width:1823px;
+  height:206px;
+  position:absolute;
+  top:80px;
+  left:50%;
+  z-index:-100;
+  transform:translatex(-50%);
+    filter: blur(50px);
+  -webkit-filter: blur(50px);
+
+}
 /*---------버튼-------*/
 .up-btn {
   cursor: pointer;
