--- a/docs/index.css
+++ b/docs/index.css
@@ -769,6 +769,8 @@ html > body .poster-box .swiper-button-disabled {
   cursor: pointer;
   padding-top: 100px;
   height: 740px;
+  pointer-events: auto;
+  z-index: 2;
 }
 
 .question-box::after {
@@ -856,9 +858,8 @@ html > body .poster-box .swiper-button-disabled {
 
 
 /* 별자리 효과 */
-#nodes-wrap {
+.nodes-wrap {
   pointer-events:none;
-  z-index:-1;
   opacity:0.6;
 }
 
